--- a/style.css
+++ b/style.css
@@ -26,11 +26,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   padding-left: 40%;
 }
 
-#flag {
-  width: 8%;
-  padding-bottom: 1%;
-}
-
 div:not(.container):not(.row):not(.covid-container):not(.ignore) {
   width: 100%;
   height: 100%;
@@ -38,7 +33,7 @@ div:not(.container):not(.row):not(.covid-container):not(.ignore) {
   padding: 2%;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
   border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.45);
+  background-color: #f5f5f5;
   backdrop-filter: blur(15px);
 }
 
