--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   margin: 1% 0%;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
   border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.65);
+  background-color: #eoffff;
   backdrop-filter: blur(15px);
 }
 
